# amadeus_robot_framework

./: README.md  airport_it_robot_workspace.code-workspace
ams-lib-furkan/: .gitignore  Jenkinsfile  README.md  generatedoc.py  import_edi.py  pytest.ini  requirements-workflow.txt  requirements.txt  robot.toml  setup.cfg  workbench.yaml
ams-lib-furkan/ams/: __init__.py  commons.py  keywords.resource
ams-lib-furkan/ams/amg_api_calls/: injector.py
ams-lib-furkan/ams/cds_api_calls/: injector.py
ams-lib-furkan/ams/cds_api_calls/payloads/: delete_rule.jinja  rule.jinja
ams-lib-furkan/ams/cfg_api_calls/: injector.py
ams-lib-furkan/ams/cfg_api_calls/payloads/: setting.jinja
ams-lib-furkan/ams/data_model/: readme.md
ams-lib-furkan/ams/data_model/data_store/: end_points.yml  environment.yml  inbound_data_for_updating_time.py  jmespath_queries.yml  outbound_data_for_updating_time.py
ams-lib-furkan/ams/fom_api_calls/: injector.py
ams-lib-furkan/ams/frms_api_calls/: common.py  injector_allocation.py  injector_plan.py  injector_publish.py  injector_rest.py  injector_rule.py  responses.py
ams-lib-furkan/ams/grammar/: readme.md
ams-lib-furkan/ams/health_check/: health_check.py  injector.py
ams-lib-furkan/ams/initalize_ams_test/: component_versions.py  injector.py  input_builder.py  readme.md
ams-lib-furkan/ams/msc_api_calls/: injector.py
ams-lib-furkan/ams/vip_api_calls/: injector.py  readme.md
ams-lib-furkan/doc/: readme.md
ams-lib-furkan/tests/: check_implementation_in_py.py  readme.md
ams-lib-furkan/tests/data/: first_test_data.py
(+226 files in other folders)
