[metadata]
name = ams_lib
version = file: VERSION
description = ams Library - Utopy project
url = https://rndwww.nce.amadeus.net/git/projects/UTOPY/repos/ams-lib/browse
author = XXXX
author_email = XXXX@amadeus.com
licence = ""
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
  jmespath_rf_lib
  protocols-lib

[options.package_data]
* = *.resource, grammar/*.xml, *.xml.j2, *.json, *.yml, *.jinja

[options.packages.find]
exclude = ams_lib.tests